--- a/heart_disease_notebook.ipynb
+++ b/heart_disease_notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNznUgkF8ne7LwF9EtbvG/o",
+      "authorship_tag": "ABX9TyOKZV5lOquZqjrd77r4rGO0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,6 +110,15 @@
       ],
       "metadata": {
         "id": "oCaBMDHTsAdK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 0. Imports and Installations\n"
+      ],
+      "metadata": {
+        "id": "Pm6-yxAr-nFn"
       }
     },
     {
